syntax = "proto3";
package initia.gov.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/gov/v1/gov.proto";
import "amino/amino.proto";
import "initia/gov/v1/gov.proto";

option go_package = "github.com/initia-labs/initia/x/gov/types";

// Query defines the gRPC querier service for gov module.
service Query {
  // Params queries params of the gov module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/initia/gov/v1/params";
  }

  // EmergencyProposals queries emergency proposals.
  rpc EmergencyProposals(QueryEmergencyProposalsRequest) returns (QueryEmergencyProposalsResponse) {
    option (google.api.http).get = "/initia/gov/v1/emergency_proposals";
  }

  // LastEmergencyProposalTallyTimestamp queries last emergency proposal tally time.
  rpc LastEmergencyProposalTallyTimestamp(QueryLastEmergencyProposalTallyTimestampRequest)
      returns (QueryLastEmergencyProposalTallyTimestampResponse) {
    option (google.api.http).get = "/initia/gov/v1/last_emergency_proposal_tally_timestamp";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryEmergencyProposalsRequest is the request type for the
// Query/EmergencyProposals RPC method
message QueryEmergencyProposalsRequest {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = true;

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryEmergencyProposalsResponse is the response type for the
// Query/EmergencyProposals RPC method.
message QueryEmergencyProposalsResponse {
  repeated cosmos.gov.v1.Proposal proposals = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryLastEmergencyProposalTallyTimestampRequest is the request
// type for the Query/LastEmergencyProposalTallyTimestamp RPC method.
message QueryLastEmergencyProposalTallyTimestampRequest {}

// QueryLastEmergencyProposalTallyTimestampResponse is the response type for the
// Query/LastEmergencyProposalTallyTimestamp RPC method.
message QueryLastEmergencyProposalTallyTimestampResponse {
  google.protobuf.Timestamp tally_timestamp = 1
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}
